--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
+									<h3>Lahiru Darsha</h3>
+									<h4>Junior Software Developer</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1996</a></li>
 										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> rdl@darsha</a></li>
 										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
 									</ul>
 									<ul class="list personal_social">
@@ -63,7 +63,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>I love Coding.</p>
         				</div>
         			</div>
         			<div class="col-lg-6">
