--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal.jpg" alt="">
+								<img src="img/Dilshan97.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
+									<h3>Dilshan Ramesh</h3>
+									<h4>Full Stack Web Developer</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 30th Auguest, 1997</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 94 (077) 1854 709</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> Dilshanramesh81@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Homagama, Sri Lanaka</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -63,7 +63,9 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>Hi, My name is Dilshan Ramesh an undergraduate of SLIIT who tries to complete any task in the best and most effective way by using the least resources and under any pressure. I am keen to learn new things and try to keep myself upto date.
+
+								I am professional person with good communication skills and management.As well as a good technical person I am confident with my soft skills to play a supportive role in a team work.As a software engineer and a developer I am really interested in my work and enjoy every bit of it and hope to give my best to the career.</p>
         				</div>
         			</div>
         			<div class="col-lg-6">
