--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 					<div class="banner_content">
 						<div class="media">
 							<div class="d-flex">
-								<img src="img/personal.jpg" alt="">
+								<img src="img/kushan.jpg" alt="">
 							</div>
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello, i am</h6>
-									<h3>Donald McKinney</h3>
+									<h3>Kushan Ravindu</h3>
 									<h4>Junior UI/UX Developer</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 27st November, 1996</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 94 (076) 7009 881</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> Kushanrawindu@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i>Kithulgala</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
