--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 							<div class="media-body">
 								<div class="personal_text">
 									<h6>Hello, i am</h6>
-									<h3>Donald McKinney</h3>
-									<h4>Junior UI/UX Developer</h4>
+									<h3>Lihini Nisansala</h3>
+									<h4>Undergradute at NSBM</h4>
 									<p>You will begin to realise why this exercise is called the Dickens Pattern (with reference to the ghost showing Scrooge some different futures)</p>
 									<ul class="list basic_info">
-										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 31st December, 1992</a></li>
-										<li><a href="#"><i class="lnr lnr-phone-handset"></i> 44 (012) 6954 783</a></li>
-										<li><a href="#"><i class="lnr lnr-envelope"></i> businessplan@donald</a></li>
-										<li><a href="#"><i class="lnr lnr-home"></i> Santa monica bullevard</a></li>
+										<li><a href="#"><i class="lnr lnr-calendar-full"></i> 3 rd of May 2000</a></li>
+										<li><a href="#"><i class="lnr lnr-phone-handset"></i> +94 778510524</a></li>
+										<li><a href="#"><i class="lnr lnr-envelope"></i> lihininisansala95@gmail.com</a></li>
+										<li><a href="#"><i class="lnr lnr-home"></i> Colombo</a></li>
 									</ul>
 									<ul class="list personal_social">
 										<li><a href="#"><i class="fa fa-facebook"></i></a></li>
@@ -63,7 +63,7 @@
         			<div class="col-lg-6">
         				<div class="welcome_text">
         					<h4>About Myself</h4>
-        					<p>inappropriate behavior is often laughed off as “boys will be boys,” women face higher conduct standards especially in the workplace. That’s why it’s crucial that, as women, our behavior on the job is beyond reproach. inappropriate behavior is often laughed.</p>
+        					<p>Highly interested in technology.Friendly.Good at team work</p>
         				</div>
         			</div>
         			<div class="col-lg-6">
